tests/base/invalid/DefiniteAssign_CompileFail_1.whiley
import * from whiley.lang.*

void g(int x):
     return

int f(int x, int y) requires x>=0 && y>0:
    g(z)
